# multerm

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yml
egui-winit-patched/src/: lib.rs
memory/: MEMORY.md  feedback_no_cargo_build.md  project_rename.md
multerm-app/: Cargo.toml
multerm-app/src/: app.rs  clipboard.rs  daemon.rs  git_changes.rs  icon.rs  main.rs  multerm_ui.rs  platform.rs
multerm-core/: Cargo.toml
multerm-core/src/: context_bus.rs  ids.rs  pty.rs  session.rs  workspace.rs
multerm-input/: Cargo.toml
multerm-input/src/: key_to_bytes.rs  lib.rs
multerm-render/: Cargo.toml
multerm-render/shaders/: bg_quad.wgsl
multerm-render/src/: atlas.rs  color.rs  compositor.rs  cursor.rs  gpu_types.rs  lib.rs  selection.rs  surface.rs
multerm-ui/: Cargo.toml
multerm-vt/: Cargo.toml
multerm-vt/src/: cell.rs  grid.rs  parser.rs
multerm-vt/tests/: parser_tests.rs
scripts/: package-linux.sh  package-macos.sh  package-windows.ps1
termite-app/: Cargo.toml
termite-app/src/: app.rs  clipboard.rs  daemon.rs  main.rs  termite_ui.rs  user_event.rs
termite-core/: Cargo.toml
termite-core/src/: context_bus.rs  ids.rs  lib.rs  pty.rs  session.rs  workspace.rs
termite-input/: Cargo.toml
termite-render/: Cargo.toml
termite-render/shaders/: glyph_quad.wgsl
termite-render/src/: color.rs  compositor.rs  lib.rs  selection.rs  surface.rs
termite-ui/: Cargo.toml
termite-ui/src/: lib.rs  pane_layout.rs
termite-vt/: Cargo.toml
termite-vt/src/: grid.rs  lib.rs  parser.rs
termite-vt/tests/: parser_tests.rs
