[patch.crates-io]
# Patched to emit Event::Paste("") for image-only clipboard, enabling image paste in terminals.
egui-winit = { path = "egui-winit-patched" }

[workspace]
members = [
    "multerm-app",
    "multerm-core",
    "multerm-vt",
    "multerm-render",
    "multerm-input",
    "multerm-ui",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["elyric10-dev"]
description = "GPU-accelerated, workspace-first terminal for shells and AI coding agents"

[workspace.dependencies]
# Windowing / GPU
winit        = { version = "0.30", features = ["rwh_06"] }
wgpu         = "23.0"
pollster     = "0.3"
eframe       = "0.33"

# PTY
portable-pty = "0.8"

# Text rendering
cosmic-text  = { version = "0.12", features = ["swash"] }

# VT parsing
vte          = "0.13"

# Concurrency
crossbeam-channel = "0.5"
parking_lot  = "0.12"

# GPU data types
bytemuck     = { version = "1", features = ["derive"] }
glam         = "0.29"

# Utilities
bitflags     = "2"
uuid         = { version = "1", features = ["v4"] }
png          = "0.17"
anyhow       = "1"
thiserror    = "2"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }
arboard      = "3"
etagere      = "0.2"
unicode-width = "0.2"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
sysinfo      = "0.38"

# Internal crates
multerm-vt     = { path = "multerm-vt" }
multerm-core   = { path = "multerm-core" }
multerm-render = { path = "multerm-render" }
multerm-input  = { path = "multerm-input" }
multerm-ui     = { path = "multerm-ui" }
