[package]
name    = "multerm-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "multerm"
path = "src/main.rs"

[[bin]]
name = "multerm-ui"
path = "src/multerm_ui.rs"

[dependencies]
multerm-vt     = { workspace = true }
multerm-core   = { workspace = true }
multerm-render = { workspace = true }
multerm-input  = { workspace = true }
multerm-ui     = { workspace = true }
eframe         = { workspace = true }
winit          = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot    = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
pollster       = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
sysinfo        = { workspace = true }
arboard        = { workspace = true }
uuid           = { workspace = true }
png            = { workspace = true }
rfd = "0.17.2"
image = "0.25.10"
notify = "7.0"
