[package]
name    = "multerm-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true

[dependencies]
multerm-render = { workspace = true }
multerm-core   = { workspace = true }
glam           = { workspace = true }
anyhow         = { workspace = true }
