[package]
name    = "termite-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "termite"
path = "src/main.rs"

[[bin]]
name = "termite-ui"
path = "src/termite_ui.rs"

[dependencies]
termite-vt     = { workspace = true }
termite-core   = { workspace = true }
termite-render = { workspace = true }
termite-input  = { workspace = true }
termite-ui     = { workspace = true }
eframe         = { workspace = true }
winit          = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot    = { workspace = true }
anyhow         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
pollster       = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
